core/codegen/tests/ui-fail-nightly/typed-uris-invalid-syntax.stderr
error: named and unnamed parameters cannot be mixed
 --> $DIR/typed-uris-invalid-syntax.rs:7:18
  |
7 |     uri!(simple: id = 100, "Hello");
  |                  ^^^^^^^^^^^^^^^^^

error: named and unnamed parameters cannot be mixed
 --> $DIR/typed-uris-invalid-syntax.rs:8:18
  |
8 |     uri!(simple: "Hello", id = 100);
  |                  ^^^^^^^^^^^^^^^^^

error: expected `:`
 --> $DIR/typed-uris-invalid-syntax.rs:9:16
  |
9 |     uri!(simple,);
  |                ^

error: expected argument list after `:`
  --> $DIR/typed-uris-invalid-syntax.rs:10:16
   |
10 |     uri!(simple:);
   |                ^

error: unexpected end of input: expected ',' followed by route path
  --> $DIR/typed-uris-invalid-syntax.rs:11:10
   |
11 |     uri!("/mount");
   |          ^^^^^^^^

error: unexpected end of input, expected identifier
  --> $DIR/typed-uris-invalid-syntax.rs:12:5
   |
12 |     uri!("/mount",);
   |     ^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid mount point; mount points must be static, absolute URIs: `/example`
  --> $DIR/typed-uris-invalid-syntax.rs:13:10
   |
13 |     uri!("mount", simple);
   |          ^^^^^^^

error: invalid mount point; mount points must be static, absolute URIs: `/example`
  --> $DIR/typed-uris-invalid-syntax.rs:14:10
   |
14 |     uri!("/mount/<id>", simple);
   |          ^^^^^^^^^^^^^

error: unexpected end of input, call to `uri!` cannot be empty
  --> $DIR/typed-uris-invalid-syntax.rs:15:5
   |
15 |     uri!();
   |     ^^^^^^^
   |
   = note: this error originates in the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of input, expected expression
  --> $DIR/typed-uris-invalid-syntax.rs:16:5
   |
16 |     uri!(simple: id = );
   |     ^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)
